feat: add 7-day weather forecast

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,11 @@
                         <p id="feels-like"></p>
                     </div>
                 </div>
+
+                <!-- 7-Day Forecast Container -->
+                <div class="forecast-container" id="forecast-container" style="display: none;">
+                    <div id="forecast-grid"></div>
+                </div>
             </div>
         </div>
     </div>
