feat: add more weather details and expand layout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,26 @@
                         <span>Feels Like</span>
                         <p id="feels-like"></p>
                     </div>
+                    <div class="detail">
+                        <span>UV Index</span>
+                        <p id="uv-index"></p>
+                    </div>
+                    <div class="detail">
+                        <span>Sunrise</span>
+                        <p id="sunrise"></p>
+                    </div>
+                    <div class="detail">
+                        <span>Sunset</span>
+                        <p id="sunset"></p>
+                    </div>
+                    <div class="detail">
+                        <span>Pressure</span>
+                        <p id="pressure"></p>
+                    </div>
+                    <div class="detail">
+                        <span>Visibility</span>
+                        <p id="visibility"></p>
+                    </div>
                 </div>
 
                 <!-- 7-Day Forecast Container -->
@@ -50,3 +70,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+w
